hopefully fixed mobile scrollbar

--- a/assets/css/profiles.scss
+++ b/assets/css/profiles.scss
@@ -140,7 +140,7 @@
         grid-template-columns: 0.4fr;
 
         img {
-            height: calc(170vw);
+            height: 170vw;
         }
 
         .profile_text {
